log
Thu 20 Apr 2023 04:33:40 PM UTC: 
 tests:  1|8
total_score: 0/70
109b359
Thu 20 Apr 2023 04:59:06 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
0a0b976
Thu 20 Apr 2023 05:09:36 PM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  4|7
total_score: 5/70
c690738
Thu 20 Apr 2023 05:10:34 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
0b3f7d2
Thu 20 Apr 2023 05:29:08 PM UTC: 
 treemap.c | 35 +++++++++++++++++++++++++++++++----
 1 file changed, 31 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:19: error: the comparison will always evaluate as ‘true’ for the address of ‘searchTreeMap’ will never be NULL [-Werror=address]
   57 |   if(searchTreeMap!=NULL) return;
      |                   ^~
cc1: all warnings being treated as errors
Compilation failed
7a9eaa6
Thu 20 Apr 2023 05:29:58 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
66b48d2
Thu 20 Apr 2023 05:30:21 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
529e825
